# DA_2026_dev_dito

./: .gitignore  .pre-commit-config.yaml  PRIVACY.md  Prompt.md  README.md  README_ARCHITECTURE.md  README_old.md  config.py  docker-compose.eval-qdrant.yml  install.ps1  phpunit.xml  pyproject.toml  pyrightconfig.json  sources_dev_dito.yaml
.claude/: settings.json
.cursor/: settings.json
.cursor/agents/: data_curator.md  ground_truth_engineer.md  rag_evaluator.md
.cursor/rules/: specify-rules.mdc
.cursor_agents/: ground_truth_engineer.md
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-spec.yml
.github/workflows/: ci.yml  issue-from-spec.yml
.planning/.archive/: fetcher_improvement_plan.md
.prompts/: Next_Prompt_Feat_006.improved.md  Next_Prompt_Feat_006.md  Prompt.md
.specify/memory/: constitution.md
backend_services/: .env.template  Dockerfile.module.template  README.md  docker-compose.yml
backend_services/embeddings/: README.md
backend_services/module_deployer/: Dockerfile  entrypoint.py  requirements.txt
backend_services/module_embedder/: Dockerfile  entrypoint.py  requirements.txt
backend_services/module_evaluator/: Dockerfile  entrypoint.py  requirements.txt
backend_services/module_fetcher/: Dockerfile  entrypoint.py  install_cert.sh  requirements.txt
backend_services/module_preprocessor/: Dockerfile  entrypoint.py  requirements.txt
backend_services/orchestrator/: Dockerfile  requirements.txt  server.py
backend_services/qdrant_db/: Dockerfile  README.md  init_collection.py  requirements.txt
backend_services/wiki_dev_mcp_server/: Dockerfile  README.md  requirements.txt  server.py
config/: PLACEHOLDER_env.yaml  env.development.yaml  env.minimal.yaml  sources.yaml
config/secrets/: .gitkeep  README.md
data/logs/: .gitignore  pipeline_runs.json  pipeline_runs.schema.json
docs/: EVALUATION_WITHOUT_RAGAS.md  README_ARCHITECTURE.md  architecture.md  gap_analysis_prototypes_vs_pipeline.md  sources_dev_dito.yaml  test_report.md
docs/.archive/: dev_dito_repository_setup.md
dokuwiki_plugin/: README.md  action.php  admin.php  plugin.info.txt
dokuwiki_plugin/conf/: default.php  metadata.php
dokuwiki_plugin/lib/: ConfigLoader.php  JobStatusManager.php  PipelineOrchestrator.php  ServiceTester.php
evaluation/: EVALUATION_WITHOUT_RAGAS.md  README.md  __init__.py  config.py  requirements.txt
evaluation/experiments/: chunk_1024.yaml  chunk_256.yaml  chunk_512.yaml  full_eval.yaml  hybrid_vs_dense.yaml  keyword_baseline.yaml  model_bge_m3.yaml  model_bge_m3_unsupervised.yaml  model_mxbai_embed_de.yaml  model_octen_4b.yaml  model_openai_3large.yaml  model_pixie_rune.yaml  model_snowflake_arctic.yaml
evaluation/ground_truth/: README.md  leowiki_qa_50_verified.json
evaluation/metrics/: __init__.py  hit_rate.py  llm_judge.py  mean_average_precision.py  mrr.py  ndcg.py  precision_at_k.py  recall_at_k.py  statistical.py
evaluation/notebooks/: embedding_model_comparison.ipynb  j4_j6_visualizations.ipynb
evaluation/providers/: __init__.py  base.py  ollama_provider.py  openai_provider.py  sentence_transformers_provider.py
evaluation/ragas/: __init__.py  ragas_evaluator.py
evaluation/ragas_agents/: README.md  __init__.py
evaluation/reports/: __init__.py  generator.py
evaluation/results/: .gitignore  _compare.py
evaluation/scripts/: build_test_corpus.py  eval_chunk_size.py  eval_compare.py  eval_export_latex.py  eval_hybrid_vs_dense.py  eval_keyword_baseline.py  eval_model_comparison.py  eval_pipeline.py  eval_ragas.py  eval_report.py  eval_statistics.py  eval_visualize.py  eval_visualize_j4_j6.py  generate_ground_truth_from_test_corpus.py
evaluation/statistics/: __init__.py  category_analysis.py  statistical_analysis.py
evaluation/tests/: test_integration.py  test_keyword_baseline.py  test_metrics.py  test_model_comparison.py  test_new_metrics.py  test_providers.py  test_ragas.py  test_reports.py  test_statistics.py  test_visualization.py
evaluation/visualization/: __init__.py  charts.py
pipeline/: deploy_qdrant.py
pipeline/01_wiki_fetcher/: .gitignore  README.md  api_client.py  change_detector.py  change_report.py  config.py  extract_links_from_html.py  fetch_full_wiki_extended.py  incremental_fetcher.py  manifest.py  media_cache.py  progress_tracker.py  requirements.txt  resume_fetch.py  utils.py
pipeline/02_deep_evaluation/: .gitignore  check_models.py  cleanup_strategies.py  config.py  env.yaml  evaluator.py  report_generator.py  run_deep_evaluation.py  run_evaluation.py  run_strategy_generation.py
pipeline/03_embeddings_creator/: __init__.py  config.py  content_aware_chunker.py  document_loader.py  embedder.py  env.yaml  main.py  pipeline.py
pipeline/03_rag_preprocessing/: __init__.py  config.py  env.yaml  exporter.py  image_captioner.py  main.py  media_processor.py  metadata_enricher.py  page_processor.py  requirements.txt  run_preprocessing.py  spot_check.py  strategy_loader.py
pipeline/03b_preprocessing_eval/: __init__.py  evaluator.py
pipeline/04_deploy/: config.yaml  transfer_to_pi.py  verify_transfer.py
pipeline/04_embeddings_creator/: __init__.py  config.py  content_aware_chunker.py  document_loader.py  embedder.py  env.yaml  pipeline.py  requirements.txt  run_embeddings.py
pipeline/05_deploy/: __init__.py  config.yaml  deploy_config.py  deploy_qdrant.py  run_deploy.py  transfer_to_pi.py  (+1 more)
planning/: dev_dito_pipeline_manager.md  dev_dito_repository_setup.md
scripts/: README.md  _JANS_MULTISCRIPT_.ps1  dd_profile_snippet.ps1  deploy-plugin.ps1  docker_manager.ps1  glass.ps1  migration.ps1  network_setup.ps1  redact_sample.py
tests/: __init__.py  conftest.py  test_redact_sample.py
(+167 files in other folders)
