# =============================================================================
# Dev Dito - Python Project Configuration
# =============================================================================
# Central config for pytest, ruff, black, and project metadata.
# Constitution Article IV: Language Standards (PEP 8, ruff, black)
# =============================================================================

[project]
name = "dev-dito"
version = "0.1.0"
description = "Wiki Embedding Pipeline & Service Gateway for DokuWiki"
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "black",
    "jsonschema",
    "pyyaml",
]

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Fast unit tests (no Docker, no network)",
    "smoke: Docker compose validation and health checks",
    "integration: Tests against running Docker services",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

# =============================================================================
# ruff (linter) - Constitution Article IV
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "backend_services/",
    "research/",
    "dokuwiki_plugin/",
    ".planning/",
    "data/",
    "__pycache__/",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W293",  # blank line contains whitespace (intentional inside LLM prompt templates)
    "W291",  # trailing whitespace (intentional inside LLM prompt templates)
    "E402",  # module-level import not at top (pipeline modules do conditional imports)
    "UP035", # deprecated typing imports (widespread, non-breaking)
    "UP006", # non-PEP585 annotation e.g. List -> list (widespread, non-breaking)
    "UP007", # non-PEP604 annotation Union[X,Y] -> X|Y (widespread, non-breaking)
    "F541",  # f-string without placeholders (many are intentional format strings)
    "N999",  # invalid module name (pipeline dirs like 01_wiki_fetcher)
    "N806",  # non-lowercase variable in function (common for constants)
    "SIM108", # ternary instead of if-else (readability preference)
    "SIM105", # contextlib.suppress instead of try-except-pass (readability)
    "B005",  # strip with multi-char string (intentional usage)
    "E741",  # ambiguous variable name (e.g., l, O -- context-dependent)
]

[tool.ruff.lint.isort]
known-first-party = ["config"]

# =============================================================================
# black (formatter) - Constitution Article IV
# =============================================================================
[tool.black]
target-version = ["py311"]
line-length = 100
extend-exclude = '''
(
    backend_services/
    | research/
    | dokuwiki_plugin/
    | \.planning/
    | data/
)
'''
